Changed page layout, added first iplementation of graph

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,7 @@
 /* ************ ADD YOUR CUSTOM STYLES ************ */
+#pageTitle {
+  text-align: center;
+}
 
 /****************/
 /*  BAR GRAPH   */
