--- a/css/styles.css
+++ b/css/styles.css
@@ -149,6 +149,74 @@
   margin: auto;
 }
 
+.circleTooltip {
+  position: absolute;
+  background: black;
+  color: white;
+  padding: 5px;
+  border: 1px solid white;
+  border-radius: 5px;
+  display: none;
+}
+
+#yearData {
+  background-color: #b5b1b1;
+  border-radius: 5px;
+  border-width: 2px;
+  margin: 10px;
+  margin-left: 20px;
+}
+
+#movieData {
+  background-color: #b5b1b1;
+  border-radius: 5px;
+  border-width: 2px;
+  margin: 10px;
+  margin-right: 20px;
+}
+
+/* width */
+#movieData ::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+#movieData ::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+#movieData ::-webkit-scrollbar-thumb {
+  background: red; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+#movieData ::-webkit-scrollbar-thumb:hover {
+  background: #b30000; 
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  color: black;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
+tr:nth-child(odd) {
+  background-color: #8a8a8a;
+}
 /******************/
 /*    Witnesses   */
 /******************/
