--- a/css/witness.css
+++ b/css/witness.css
@@ -28,7 +28,7 @@ body {
     position: relative;
 }
 
-.right-panel {
+.witness-right-panel {
     width: 40%;
     text-align: center;
     background-color: white;
