--- a/css/map.css
+++ b/css/map.css
@@ -86,6 +86,17 @@ header {
     color: white;
 }
 
+.leaflet-popup-content-wrapper {
+    background: #000;
+    color: #fff;
+    text-align: center;
+    font-family: 'Special Elite', sans-serif;
+    border-radius: 5px;
+}
+
+.leaflet-popup-tip {
+    background: #000;
+}
 
 
 /* Other existing styles remain unchanged */
